@@ -64,7 +64,6 @@ Code Cleanup:
 9   vt100 printer support is now broken. Fix it.
 8   When sending escape sequences to mrxvt via macros, make sure we are not
     disrupting processing of another escape sequence.
-8   fg bg profile colors are not perfect yet. E.g. when ufbg is enabled.
 1   PNG and JPEG background support on Solaris looks broken
 
 --------------------------------------------------------------------------------
@@ -143,4 +142,4 @@ That's it. Happy hacking
 --------------------------------------------------------------------------------
 
  Authors	: Jimmy Zhou, Gautam Iyer
- Last Changed	: Tue 12 Sep 2006 09:50:35 PM PDT
+ Last Changed	: Thu 14 Sep 2006 05:25:31 PM PDT
